--- a/rstudio/roles/docker/templates/docker-host.conf.j2
+++ b/rstudio/roles/docker/templates/docker-host.conf.j2
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/dockerd -H 0.0.0.0:2375 -H=unix:///var/run/docker.sock --tlsverify --tlscacert /home/ec2-user/.docker/ca.pem --tlscert /home/ec2-user/.docker/cert.pem --tlskey /home/ec2-user/.docker/key.pem
+ExecStart=/usr/bin/dockerd -H 0.0.0.0:2375 -H=unix:///var/run/docker.sock --tlsverify --tlscacert {{ site_home_path }}/.docker/ca.pem --tlscert {{ site_home_path }}/.docker/cert.pem --tlskey {{ site_home_path }}/.docker/key.pem
