--- a/rstudio/roles/proxy/templates/httpd-vhosts.conf.j2
+++ b/rstudio/roles/proxy/templates/httpd-vhosts.conf.j2
@@ -38,11 +38,11 @@ Listen 443
     ProxyRequests Off
     ProxyPreserveHost on
 
-#    Header edit Referer https://{{ private_ip }}:8888/hub/admin {{ private_ip }}/hub
-#    RequestHeader edit Referer https://{{ private_ip }}:8888/hub/admin {{ private_ip }}/hub
+#    Header edit Referer https://{{ ansible_host }}:8888/hub/admin {{ ansible_host }}/hub
+#    RequestHeader edit Referer https://{{ ansible_host }}:8888/hub/admin {{ ansible_host }}/hub
 
-#    Header edit Referer https://{{ private_ip }}:8888/hub/home {{ private_ip }}/hub
-#    RequestHeader edit Referer https://{{ private_ip }}:8888/hub/home {{ private_ip }}/hub
+#    Header edit Referer https://{{ ansible_host }}:8888/hub/home {{ ansible_host }}/hub
+#    RequestHeader edit Referer https://{{ ansible_host }}:8888/hub/home {{ ansible_host }}/hub
 
     Header set Illinois-CollegeofBusiness-User %{REMOTE_USER}s
     RequestHeader set Illinois-CollegeofBusiness-User %{REMOTE_USER}s
