--- a/jupyterhub/roles/proxy/templates/shibboleth2.xml.j2
+++ b/jupyterhub/roles/proxy/templates/shibboleth2.xml.j2
@@ -11,7 +11,7 @@
 	     your list that is sent by the IDP will be used.
 	 -->
 	<ApplicationDefaults entityID="https://{{ fqdn }}/shibboleth"
-	    REMOTE_USER="eppn">
+	    REMOTE_USER="uid">
 		<!--
 		     Lifetime is the max length of a session in seconds.
 		     Timeout is the inactivity time-out in seconds.
