--- a/jupyterhub/roles/proxy/templates/Dockerfile.j2
+++ b/jupyterhub/roles/proxy/templates/Dockerfile.j2
@@ -1,6 +1,7 @@
 FROM unicon/shibboleth-sp
 
 ADD /shibboleth-sp/ /etc/shibboleth/
+ADD /appfiles/ /var/www/html/
 ADD /root/site/ /root/site/
 ADD /conf.d/ /etc/httpd/conf.d/
 ADD /.docker/ /root/.docker/
